# image_scan_by_ai

./: .replit  README.md  ai_detector.py  enhanced_ai_detector.py  index.js  main.py  package-lock.json  package.json  pure_flask_app.py  pyproject.toml  railway.toml  replit.md  run_pure_flask.py  simple_ai_detector.py
.local/state/replit/agent/design_reference/1b671b2d-d85f-4626-84fc-41ff2862f867/: 9e648f1f-a4c2-409c-8f23-3ea1fc2974d1.html
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted--AI-Image-Detection-Checker-Project-Details-Below-is-a-comprehensive-breakdown-of-the-AI-Image-1754302984356_1754302984356.txt  Pasted--see-you-need-a-more-practical-and-precise-solution-To-detect-whether-an-image-is-AI-generated-or-r-1754305114858_1754305114858.txt  Pasted-The-best-algorithm-for-detecting-whether-an-image-is-AI-generated-or-real-would-typically-in-1754304913814_1754304913815.txt  Pasted-The-best-algorithm-for-detecting-whether-an-image-is-AI-generated-or-real-would-typically-involve-a--1754304044164_1754304044164.txt  Pasted-To-detect-whether-an-image-is-AI-generated-or-real-there-are-a-few-different-approaches-you-can-use-1756405031328_1756405031328.txt
static/: app.js  home.js  style.css
templates/: 404.html  about.html  base.html  faq.html  how-it-works.html  index.html
